Add move with navcon and native

--- a/2st/app/src/main/res/layout/fragment_f_f2.xml
+++ b/2st/app/src/main/res/layout/fragment_f_f2.xml
@@ -16,7 +16,7 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:keepScreenOn="true"
-        android:text="@string/dummy_content"
+        android:text="@string/f2"
         android:textColor="?attr/fullscreenTextColor"
         android:textSize="50sp"
         android:textStyle="bold" />
@@ -38,8 +38,9 @@
             tools:ignore="UselessParent">
 
             <Button
-                android:id="@+id/dummy_button"
+                android:id="@+id/btn_ff2_to_ff1"
                 style="?android:attr/buttonBarButtonStyle"
+                android:onClick="returnBack"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
