--- a/3st/2st/app/src/main/res/navigation/nav_graph.xml
+++ b/3st/2st/app/src/main/res/navigation/nav_graph.xml
@@ -5,7 +5,7 @@
 
     <fragment
         android:id="@+id/firstFragment"
-        android:name="com.example.a2st.FF1"
+        android:name="com.example.a2st.View.FF1"
         android:label="First Fragment">
         <action
             android:id="@+id/action_firstFragment_to_secondFragment"
@@ -14,7 +14,7 @@
 
     <fragment
         android:id="@+id/secondFragment"
-        android:name="com.example.a2st.FF2"
+        android:name="com.example.a2st.View.FF2"
         android:label="Second Fragment" />
     <action
         android:id="@+id/action_secondFragment_to_firstFragment"
