--- a/3st/app/src/main/res/layout/fragment_f_f1.xml
+++ b/3st/app/src/main/res/layout/fragment_f_f1.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="?attr/fullscreenBackgroundColor"
     android:theme="@style/ThemeOverlay._2st.FullscreenContainer"
-    tools:context=".FF1">
+    tools:context=".View.FF1">
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -13,6 +13,19 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center">
+
+
+        <EditText
+            android:id="@+id/log"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Login"/>
+
+        <EditText
+            android:id="@+id/pass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Password"/>
 
         <Button
             android:id="@+id/btn_to_ff2"
